syntax = "proto3";

option go_package = "github.com/charmingruby/remy-common/api";

package api;

message Order{
    string ID = 1;
    string CustomerID = 2;
    string Status = 3;
    repeated Item Items =4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns(Order);
}

message Item {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    string price_id = 4;
}

message ItemWithQuantity {
    string id = 1;
    int32 quantity = 2;
}

message CreateOrderRequest{
    string customerID = 1;
    repeated ItemWithQuantity items = 2;
}
